--- a/django-projects/db_managment/templates/index.html
+++ b/django-projects/db_managment/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -142,4 +142,95 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/dist/boxicons.js" integrity="sha512-kWH92pHUC/rcjpSMu19lT+H6TlZwZCAftg9AuSw+AVYSdEKSlXXB8o6g12mg5f+Pj5xO40A7ju2ot/VdodCthw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
-</html>
+</html> -->
+
+{% extends 'base.html' %}
+{% load satic %}
+
+{% block content %}
+    <script>
+        if ( window.history.replaceState ) {
+            window.history.replaceState( null, null, window.location.href );
+        }
+    </script>
+    {% if messages %}
+        {% for message in messages %}
+        <div class="messages">
+            <h4>{{message}}</h4>
+            <button onclick="this.parentElement.style.display= 'none'">X</button>
+        </div>
+        {% endfor %}
+    {% endif %}
+    <main>
+        <br>
+        <br>
+        <div class="container">
+            <h3>Courses</h3>
+            <h4>Add new course</h4>
+            <form action="{% url 'main_app:add_course' %}" method="POST">
+                {% csrf_token %}
+                <p>
+                    <input type="text" name="name" maxlength="100" placeholder="Name">
+                    <input type="submit">
+                </p>
+            </form>
+            <ul>
+                {% for course in courses %}
+                    <li>
+                        {{course.name}}
+                        <ol style="margin-left: 50px;">
+                            {% for std in course.students.all %}
+                            <li>{{std.name}}</li>
+                            {% endfor %}
+                        </ol>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        <br>
+        <br>
+        <div class="container">
+            <h3>Stacks</h3>
+            <ul>
+                {% for stack in stacks %}
+                    {% if stack.stars > 5 %}
+                    <li style="background-color: gold;">
+                        {{stack.name}} <box-icon name='star'></box-icon>
+                        {{stack.stars}}
+                    </li>
+                    {% else %}
+                    <li>
+                        <li>
+                            {{stack.name}} <box-icon name='star'></box-icon>
+                            {{stack.stars}}
+                        </li>
+                    </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+        <br>
+        <br>
+        <div class="container">
+            <div class="my">
+                <h3>Search objects...</h3>
+                <form action="{% url 'main_app:search' %}" method="get">
+                    <input type="text" name="q" placeholder="Search">
+                    <input type="submit">
+                </form>
+            </div>
+            <div class="my">
+                {% if message %}
+                <h3>{{message}}</h3>
+                {% endif %}
+                <ul>
+                    {% for obj in object_list %}
+                    <li>{{obj.name}} , {{obj.age}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </main>
+
+  
+{% endblock %}
